--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client-install": "npm install --prefix client",
     "server": "nodemon ./bin/www",
     "client": "npm start --prefix client",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "concurrently": "^5.0.2",
