--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "client-install": "npm install --prefix client",
     "server": "nodemon ./bin/www",
-    "client": "npm start --prefix client",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "client": "npm start --prefix client"
   },
   "dependencies": {
     "concurrently": "^5.0.2",
