--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
-  "homepage": "."
+  "proxy": "http://localhost:5000"
 }
