--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "google-auth-library": "^5.7.0",
     "http-errors": "~1.6.3",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "npm": "^6.13.4",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
