--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "npm": "^6.13.4",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "@hapi/joi": "^16.1.8",
+    "mongoose": "^5.8.1",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
-    "@hapi/joi": "^16.1.8",
-    "bcryptjs": "^2.4.3",
     "concurrently": "^5.0.2",
-    "mongoose": "^5.8.1",
     "nodemon": "^2.0.2"
   }
 }
