--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "google-auth-library": "^5.7.0",
+    "googleapis": "^46.0.0",
     "http-errors": "~1.6.3",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.1",
     "morgan": "~1.9.1",
     "npm": "^6.13.4",
-    "pug": "2.0.0-beta11",
-    "@hapi/joi": "^16.1.8",
-    "mongoose": "^5.8.1",
-    "bcryptjs": "^2.4.3"
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
